set and nset baisic auth in frontend and tested basic-auth controller
